add netlify site name to simpla init

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         repo: 'yuriMalakhov/polymer-simpla',
 
         // Netlify auth adapter, initialize with your Netlify site name
-        auth: new SimplaNetlify({ site: 'mysite' }),
+        auth: new SimplaNetlify({ site: 'car-park-attendant-frog-74620' }),
 
         // Public content source (optional)
         // Defaults to fetching directly from Github
